--- a/SCSS/elements/sizesAndSpaces.scss
+++ b/SCSS/elements/sizesAndSpaces.scss
@@ -1,4 +1,7 @@
 $standar: 5px;
-
 $big-block: 12rem;
-$sustractor: 2rem;
+$footer-block: 8rem;
+$sustractor: 1rem;
+$hide-link-space: 3rem;
+$phone: 600px;
+$monitor: 1075px;
