--- a/SCSS/TextOnHeader.scss
+++ b/SCSS/TextOnHeader.scss
@@ -7,6 +7,7 @@
     font-size: $font-large;
     margin-left: 1rem;
     margin-top: 0.2rem;
+    width: 10%;
     @include onHover($secondary_on_hover, default);
     @media screen and (max-width: $phone) {
         width: 30%;
